inserido carousel bootstrap

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ h2{
     color: #303030;
     font-weight: 600;
 }
-img{
+figure img{
     width: 100%;
+}
+.carousel-caption h5{
+    font-size: 80px;
+    color: #ffc107;
+    text-shadow: 2px 2px 2px black;
 }
